# graffiti-detection-ai-model

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  MODEL_CARD.md  PRIVACY.md  README.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  VERIFICATION_REPORT.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  ios.yml  publish-pypi.yml
api/: graffiti_detector.py
configs/: alerts_example.json  cameras_example.json  dataset.yaml  model.yaml  street_scenarios.yaml  surveillance_config.yaml  training.yaml
deployment/: deploy_configs.py
graffiti_detection/: __init__.py  _version.py  api.py  benchmark.py  detector.py
graffiti_detection/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py
graffiti_detection/evaluation/: __init__.py  metrics.py  report.py
graffiti_detection/utils/: __init__.py  alerts.py  visualization.py
ios/GraffitiGuard/: README.md  project.yml
ios/GraffitiGuard/AppStore/: ExportOptions.plist
ios/GraffitiGuard/AppStore/ScreenshotDesign/: render.mjs
ios/GraffitiGuard/AppStore/metadata/: age_rating.json  copyright.txt  review_notes.txt
ios/GraffitiGuard/AppStore/metadata/en-US/: description.txt  keywords.txt  marketing_url.txt  privacy_policy_url.txt  promotional_text.txt  subtitle.txt  support_url.txt
ios/GraffitiGuard/GraffitiGuard.xcodeproj/: project.pbxproj
ios/GraffitiGuard/GraffitiGuard.xcodeproj/xcshareddata/xcschemes/: GraffitiGuard.xcscheme
ios/GraffitiGuard/GraffitiGuard/App/: GraffitiGuardApp.swift
ios/GraffitiGuard/GraffitiGuard/Core/Imaging/: DetectionOverlayLayout.swift  ImagePreparer.swift
ios/GraffitiGuard/GraffitiGuard/Core/Inference/: OnDeviceGraffitiDetector.swift
ios/GraffitiGuard/GraffitiGuard/Core/Models/: DetectionModels.swift
ios/GraffitiGuard/GraffitiGuard/Features/Detection/: CameraPicker.swift  DetectionCanvas.swift  DetectionScreen.swift  DetectionViewModel.swift
ios/GraffitiGuard/GraffitiGuard/Features/Settings/: SettingsView.swift
ios/GraffitiGuard/GraffitiGuard/Resources/: Info.plist
ios/GraffitiGuard/GraffitiGuard/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/GraffitiGuard/GraffitiGuard/Resources/Assets.xcassets/DemoStreet.imageset/: Contents.json
ios/GraffitiGuard/GraffitiGuard/Resources/Models/GraffitiDetector.mlpackage/: Manifest.json
ios/GraffitiGuard/GraffitiGuard/Resources/Models/GraffitiDetector.mlpackage/Data/com.apple.CoreML/: model.mlmodel
ios/GraffitiGuard/GraffitiGuard/Shared/: BrandStyle.swift
ios/GraffitiGuard/GraffitiGuardTests/: DetectionCoreTests.swift
notebooks/: 01_data_exploration.ipynb  02_visualization.ipynb  03_model_testing.ipynb
scripts/: evaluate.py  export_coreml.py  incident_logger.py  inference.py  multi_camera_surveillance.py  prepare_dataset.py  real_time_dashboard.py  train.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py
src/utils/: __init__.py  alerts.py  visualization.py
tests/: README.md  __init__.py  run_tests.py  test_alerts.py  test_api.py  test_augmentation.py  test_benchmark.py  test_dataset.py  test_evaluation_report.py  test_export_coreml.py  test_incident_logger.py  test_integration.py  test_metrics.py  test_public_package.py  test_street_scenarios.py  test_surveillance.py  test_visualization.py
