[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graffiti-detection-ai-model"
version = "0.1.2"
description = "Graffiti detection package using YOLOv8 for training, inference, surveillance, and API integration."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
  { name = "Pierre-Henry Soria" }
]
keywords = ["computer-vision", "graffiti", "yolo", "object-detection", "surveillance", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Recognition"
]
dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "ultralytics>=8.0.0",
  "opencv-python>=4.8.0",
  "opencv-contrib-python>=4.8.0",
  "Pillow>=10.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "albumentations>=1.3.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "tqdm>=4.65.0",
  "PyYAML>=6.0",
  "tensorboard>=2.13.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.11.0",
  "imageio>=2.31.0",
  "pycocotools>=2.0.6",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "python-multipart>=0.0.6",
  "requests>=2.31.0",
  "twilio>=8.10.0",
  "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/pH-7/graffiti-detection-ai-model"
Repository = "https://github.com/pH-7/graffiti-detection-ai-model"
Issues = "https://github.com/pH-7/graffiti-detection-ai-model/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["graffiti_detection*", "src*"]
exclude = ["tests*", "notebooks*", "deployment*"]
