[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graffiti-detection-ai-model"
description = "Graffiti detection package using YOLOv8 for training, inference, surveillance, and API integration."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
authors = [
  { name = "Pierre-Henry Soria" }
]
keywords = ["computer-vision", "graffiti", "yolo", "object-detection", "surveillance", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Recognition"
]
dependencies = [
  "numpy>=1.24.0",
  "ultralytics>=8.3.0,<9"
]

[project.optional-dependencies]
training = [
  "albumentations>=2.0.0,<3",
  "matplotlib>=3.7.0",
  "opencv-python>=4.8.0",
  "pycocotools>=2.0.6",
  "PyYAML>=6.0",
  "torch>=2.0.0",
  "tqdm>=4.65.0"
]
alerts = [
  "opencv-python>=4.8.0",
  "requests>=2.31.0",
  "twilio>=8.10.0"
]
api = [
  "fastapi>=0.115.0,<1",
  "opencv-python>=4.8.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0,<1"
]
notebooks = [
  "jupyterlab>=4.0.0",
  "pandas>=2.0.0",
  "seaborn>=0.13.0"
]
all = [
  "albumentations>=2.0.0,<3",
  "fastapi>=0.115.0,<1",
  "matplotlib>=3.7.0",
  "opencv-python>=4.8.0",
  "pycocotools>=2.0.6",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "torch>=2.0.0",
  "tqdm>=4.65.0",
  "twilio>=8.10.0",
  "uvicorn>=0.30.0,<1"
]
dev = [
  "albumentations>=2.0.0,<3",
  "build>=1.2.0",
  "fastapi>=0.115.0,<1",
  "httpx>=0.27.0",
  "matplotlib>=3.7.0",
  "opencv-python>=4.8.0",
  "pycocotools>=2.0.6",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "ruff>=0.15.0,<0.16",
  "torch>=2.0.0",
  "tqdm>=4.65.0",
  "twilio>=8.10.0",
  "twine>=6.0.0",
  "uvicorn>=0.30.0,<1"
]

[project.urls]
Homepage = "https://github.com/EfficientTools/graffiti-detection-ai-model"
Repository = "https://github.com/EfficientTools/graffiti-detection-ai-model"
Issues = "https://github.com/EfficientTools/graffiti-detection-ai-model/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["graffiti_detection*", "src*"]
exclude = ["tests*", "notebooks*", "deployment*"]

[tool.setuptools.dynamic]
version = { attr = "graffiti_detection._version.__version__" }

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
