[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graffiti-detection-ai-model"
description = "Graffiti detection package using YOLOv8 for training, inference, surveillance, and API integration."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
authors = [
  { name = "Pierre-Henry Soria" }
]
keywords = ["computer-vision", "graffiti", "yolo", "object-detection", "surveillance", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Recognition"
]
dependencies = [
  "numpy>=2.2.6",
  "ultralytics>=8.4.99,<9"
]

[project.optional-dependencies]
training = [
  "albumentations>=2.0.8,<3",
  "matplotlib>=3.10.9",
  "opencv-python>=5.0.0.93",
  "pycocotools>=2.0.11",
  "PyYAML>=6.0.3",
  "torch>=2.13.0",
  "tqdm>=4.69.0"
]
alerts = [
  "opencv-python>=5.0.0.93",
  "requests>=2.34.2",
  "twilio>=9.10.9"
]
api = [
  "fastapi>=0.139.2,<1",
  "opencv-python>=5.0.0.93",
  "python-multipart>=0.0.32",
  "uvicorn>=0.51.0,<1"
]
notebooks = [
  "jupyterlab>=4.6.1",
  "pandas>=2.3.3",
  "seaborn>=0.13.2"
]
all = [
  "albumentations>=2.0.8,<3",
  "fastapi>=0.139.2,<1",
  "matplotlib>=3.10.9",
  "opencv-python>=5.0.0.93",
  "pycocotools>=2.0.11",
  "python-multipart>=0.0.32",
  "PyYAML>=6.0.3",
  "requests>=2.34.2",
  "torch>=2.13.0",
  "tqdm>=4.69.0",
  "twilio>=9.10.9",
  "uvicorn>=0.51.0,<1"
]
dev = [
  "albumentations>=2.0.8,<3",
  "build>=1.5.0",
  "fastapi>=0.139.2,<1",
  "httpx>=0.28.1",
  "matplotlib>=3.10.9",
  "opencv-python>=5.0.0.93",
  "pycocotools>=2.0.11",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "python-multipart>=0.0.32",
  "PyYAML>=6.0.3",
  "requests>=2.34.2",
  "ruff>=0.15.22,<0.16",
  "torch>=2.13.0",
  "tqdm>=4.69.0",
  "twilio>=9.10.9",
  "twine>=6.2.0",
  "uvicorn>=0.51.0,<1"
]

[project.urls]
Homepage = "https://github.com/EfficientTools/graffiti-detection-ai-model"
Repository = "https://github.com/EfficientTools/graffiti-detection-ai-model"
Issues = "https://github.com/EfficientTools/graffiti-detection-ai-model/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["graffiti_detection*"]
exclude = ["tests*", "notebooks*", "deployment*"]

[tool.setuptools.dynamic]
version = { attr = "graffiti_detection._version.__version__" }

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
